--- a/wp-content/themes/accelerate/style.css
+++ b/wp-content/themes/accelerate/style.css
@@ -502,7 +502,7 @@ body {
 	background-color: #F8F8F8;
 }
 #header-text-nav-wrap {
-	padding: 30px 0 40px;
+	padding: 0px;
 }
 #header-left-section {
 	float: left;
@@ -2156,4 +2156,30 @@ background-color: #32ACD5;
 .woocommerce ul.products li.product .price del{
 	display: inline-block;
 	margin-right: 10px;
+}
+
+.fa {
+    color: #4f87d1;
+}
+
+.homepage .col-left {
+    float: left;
+    width: 60%;
+}
+
+.homepage .col-right {
+    float: right;
+    width: 40%;
+}
+
+@media screen and (max-width: 768px) {
+    .homepage .col-left {
+        float: none;
+        width: auto;
+    }
+    
+    .homepage .col-right {
+        float: none;
+        width: auto;
+    }
 }
